--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "npm": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "sass": "^1.56.2",
     "web-vitals": "^2.1.4"
